Simplificações de verificações